--- a/src/global.css
+++ b/src/global.css
@@ -6,7 +6,7 @@ html, :root, body {
 }
 
 * {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Monospace, Arial, Helvetica, sans-serif;
     color: #ddd;
 }
 
